fabrik/internal/engine/testdata/command_errors.txt
//fabrik:cli:command rejects anything but an exported, non-variadic package
function of the shape func(ctx cli.Context, deps...) error, and derived
command names must be unique.
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/cli v0.1.0

replace github.com/gofabrik/fabrik/cli => CLIDIR
-- main.go --
package main

func main() {}
-- shared/shared.go --
package shared

import (
	"context"

	"github.com/gofabrik/fabrik/cli"
)

type Commands struct{}

//fabrik:cli:command
func (c *Commands) Method(ctx cli.Context) error { return nil }

//fabrik:cli:command
func Generic[T any](ctx cli.Context) error { return nil }

//fabrik:cli:command
func unexported(ctx cli.Context) error { return nil }

//fabrik:cli:command
func Variadic(ctx cli.Context, names ...string) error { return nil }

//fabrik:cli:command
func WrongReturn(ctx cli.Context) (string, error) { return "", nil }

//fabrik:cli:command
func PlainContext(ctx context.Context) error { return nil }

//fabrik:cli:command
func NoContext() error { return nil }

//fabrik:cli:command
func ServeHTTP(ctx cli.Context) error { return nil }

//fabrik:cli:command
var NotAFunction int
-- other/other.go --
package other

import "github.com/gofabrik/fabrik/cli"

//fabrik:cli:command
func ServeHTTP(ctx cli.Context) error { return nil }
-- want/diags --
error: shared/shared.go:11:1: //fabrik:cli:command must be a package function, not a method
  help: dependencies are parameters, not receiver fields
error: shared/shared.go:14:1: //fabrik:cli:command function Generic cannot be generic
  help: declare a concrete function
error: shared/shared.go:17:1: //fabrik:cli:command function unexported must be exported
  help: generated code calls it as a package-qualified symbol; capitalize the name
error: shared/shared.go:20:1: //fabrik:cli:command function Variadic cannot be variadic
  help: declare each dependency as its own parameter
error: shared/shared.go:23:1: command WrongReturn has the wrong signature
  help: want func(ctx cli.Context, deps...) error
error: shared/shared.go:26:1: command PlainContext must take cli.Context as its first parameter
  help: want func(ctx cli.Context, deps...) error
error: shared/shared.go:29:1: command NoContext must take cli.Context as its first parameter
  help: want func(ctx cli.Context, deps...) error
error: shared/shared.go:32:1: duplicate command "serve-http"
  help: first declared at $WORK/other/other.go:5:1; command paths are unique per parent
error: shared/shared.go:35:1: //fabrik:cli:command must be on a function
